# Credit-Card-Fraud-Detection-ML-project

./: .gitignore  Dockerfile  README.md  app.py  push_data.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: get-ip.yaml  main.yaml
data_schema/: schema.yaml
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/constants/: app_constants.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: exception.py
src/logging/: logger.py
src/pipeline/: train_pipeline.py
src/utils/: ml_utils.py  utils.py
