[project]
name = "credit-card-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.5.20",
    "dagshub>=0.7.0",
    "fastapi>=0.136.3",
    "mlflow>=3.12.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pyaml>=26.2.1",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
]
